--- a/QuranX.Web/Views/QuranVerses/Index.cshtml
+++ b/QuranX.Web/Views/QuranVerses/Index.cshtml
@@ -14,7 +14,7 @@
 	<h2>@group.Chapter.EnglishName - @group.Chapter.ArabicName</h2>
 	foreach (Verse verse in group.Verses)
 	{
-		<div class="row">
+		<div class="row verse__statistics">
 			<span class="verse-reference">@verse.ChapterNumber.@verse.VerseNumber</span>
 			<a href="analysis/@verse.ChapterNumber.@verse.VerseNumber">
 				<dl class="count-and-label">
