--- a/QuranX.Web/Views/Commentators/Index.cshtml
+++ b/QuranX.Web/Views/Commentators/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>@ViewBag.Title</h1>
-<ol class="commentary__commentator-list">
+<ol class="commentary__commentator-list striped">
 	@foreach (Commentator commentator in Model)
 	{
 		<li>
