--- a/QuranX.Web/Views/HadithCollections/Index.cshtml
+++ b/QuranX.Web/Views/HadithCollections/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>@ViewBag.Title</h1>
-<ol class="hadithcollection__collection-list">
+<ol class="hadithcollection__collection-list striped">
 	@foreach (HadithCollection collection in Model)
 	{
 		<li>
