--- a/QuranX.Web/Views/Shared/CommentaryView.cshtml
+++ b/QuranX.Web/Views/Shared/CommentaryView.cshtml
@@ -9,7 +9,7 @@
 <div>
 	<dl class="boxed">
 		<dt>
-			<a href="/@verse"><span class="verse-reference">@verse</span></a>
+			<a href="/@verse"><span class="verse__reference">@verse</span></a>
 			@Model.Commentator.Code - @Model.Commentator.Description
 		</dt>
 		@foreach (string text in Model.Commentary.Text)
