--- a/QuranX.Web/Views/VerseAnalysis/Index.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/Index.cshtml
@@ -20,7 +20,7 @@
 		{
 			<li class="verse-analysis__word row">
 				<div class="col-xs-4 col-sm-5 col-md-4 col-lg-2">
-					<span class="verse-reference">
+					<span class="verse__reference">
 						@Model.Chapter.ChapterNumber.@Model.VerseNumber.@word.WordNumber
 					</span>
 				</div>
