--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -120,6 +120,10 @@
 	margin-right: auto;
 	margin-bottom: 1em;
 	width: 100%;
+	background-color: hsl(208, 57%, 83%) !important;
+	padding: 0.5em 1em;
+	border-radius: 0.25em;
+	border: 2px solid hsl(208, 17%, 73%);
 }
 
 @media (min-width: 550px) {
@@ -173,6 +177,12 @@
 	.commentary__commentator-list > li {
 		padding: 0.25em;
 	}
+
+h1,h2,h3,h4,h5,h6 {
+	text-align: center;
+	padding: 0;
+	margin: 0.25em 0;
+}
 
 @media(max-width: 480px) {
 	.commentary__commentator-list > li {
