--- a/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
+++ b/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
@@ -9,7 +9,7 @@
 		<div class="col-xs-4">
 			<label for="VerseNumber" class="control-label">Verse</label>
 		</div>
-		<div class="col-xs-8">
+		<div class="col-xs-7 col-sm-8">
 			<select id="ChapterNumber" name="ChapterNumber" class="form-control">
 				@if (!Model.AllVerses)
 				{
@@ -367,7 +367,7 @@
 				}
 			</select>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-5 col-sm-4">
 			<select id="VerseNumber" name="VerseNumber" class="form-control"></select>
 		</div>
 	</div>
