Analysis header correction

--- a/QuranX.Web/Views/VerseAnalysis/Index.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>The Quran</h1>
 <h2>
-	Analysis of <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
+	Analysis of verse <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
 		@Model.Chapter.ChapterNumber.@Model.VerseNumber
 	</a>
 </h2>
