--- a/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
+++ b/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
@@ -18,9 +18,11 @@
 	{
 		<li class="root-analysis__extract row">
 			<div class="col-xs-4 col-sm-3 col-lg-1">
-				<div class="verse__reference">
-					@extract.ChapterNumber.@extract.VerseNumber
-				</div>
+				<a href="/Analysis/@extract.ChapterNumber.@extract.VerseNumber#word_@extract.SelectedWord.WordNumber">
+					<div class="verse__reference">
+						@extract.ChapterNumber.@extract.VerseNumber
+					</div>
+				</a>
 			</div>
 			<div class="col-xs-8 col-sm-3 col-lg-1 small-caps">@extract.SelectedWordPart.Description</div>
 			<div class="col-xs-8 col-sm-3 col-lg-1">@extract.SelectedWord.Arabic</div>
