--- a/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -19,6 +19,7 @@
 		@foreach (var word in Model.VerseAnalysis.Words)
 		{
 			<li class="verse-analysis__word row">
+				<a name="word_@word.WordNumber" />
 				<div class="col-xs-4 col-sm-5 col-md-4 col-lg-2">
 					<span class="verse__reference">
 						@Model.Chapter.ChapterNumber.@Model.VerseNumber.@word.WordNumber
