--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -369,7 +369,7 @@ dl.boxed {
 	}
 
 .hadith {
-	border: 1px solid black;
+	border: 1px solid hsl(208, 37%, 43%);
 	margin-bottom: 2em;
 	border-radius: 4px;
 	padding: 2px;
