--- a/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
+++ b/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
@@ -9,24 +9,22 @@
 <h2>Verses for root @Model.ArabicRoot (@Model.RootLetterNames)</h2>
 <ul class="root-analysis__extract-list striped">
 	<li class="root-analysis__extract-header row hidden-xs">
-		<div class="col-sm-3 col-lg-1">Verse</div>
-		<div class="col-sm-3 col-lg-1">Type</div>
-		<div class="col-sm-3 col-lg-1">Arabic</div>
-		<div class="col-sm-3 col-lg-1">Transliteration</div>
+		<div class="col-sm-4 col-lg-1">Verse</div>
+		<div class="col-sm-4 col-lg-1">Type</div>
+		<div class="col-sm-4 col-lg-1">Transliteration</div>
 	</li>
 	@foreach (VerseViewModel extract in Model.Extracts)
 	{
 		<li class="root-analysis__extract row">
-			<div class="col-xs-4 col-sm-3 col-lg-1">
+			<div class="col-xs-4 col-sm-4 col-lg-1">
 				<a href="/Analysis/@extract.ChapterNumber.@extract.VerseNumber#word_@extract.SelectedWord.WordNumber">
 					<div class="verse__reference">
 						@extract.ChapterNumber.@extract.VerseNumber
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-8 col-sm-3 col-lg-1 small-caps">@extract.SelectedWordPart.Description</div>
-			<div class="col-xs-8 col-sm-3 col-lg-1">@extract.SelectedWord.Arabic</div>
-			<div class="col-xs-8 col-xs-push-4 col-sm-push-0 col-sm-3 col-lg-1 small-caps">@extract.SelectedWord.Buckwalter</div>
+			<div class="col-xs-8 col-sm-4 col-lg-1 small-caps">@extract.SelectedWordPart.Description</div>
+			<div class="col-xs-8 col-sm-push-0 col-sm-3 col-lg-1 small-caps">@extract.SelectedWord.Buckwalter</div>
 			<div class="col-xs-12 col-sm-12 col-lg-8 root-analysis__extract-text">
 				<div class="root-analysis__extract-english">
 					@foreach(VerseAnalysisWord word in extract.Words)
@@ -38,19 +36,6 @@
 						else
 						{
 							@word.English@:&nbsp;
-						}
-					}
-				</div>
-				<div class="root-analysis__extract-arabic">
-					@foreach (VerseAnalysisWord word in extract.Words)
-					{
-						if (word == extract.SelectedWord)
-						{
-							<strong>@word.Arabic&nbsp;</strong>
-						}
-						else
-						{
-							@word.Arabic@:&nbsp;
 						}
 					}
 				</div>
