--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -10,18 +10,16 @@
 	@Scripts.Render("~/bundles/site")
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="quranx navbar navbar-inverse navbar-fixed-top">
 		<div>
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+			<div class="quranx navbar-header">
+				<button type="button" class="quranx navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					MENU
 				</button>
-				<a href="/1.1" class="navbar-brand">QuranX</a>
+				<a href="/1.1" class="quranx navbar-brand">QuranX</a>
 			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
+			<div class="quranx navbar-collapse collapse">
+				<ul class="quranx nav navbar-nav">
 					<li><a href="/1.1">Quran</a></li>
 					<li>@Html.RouteLink("Commentaries", "Commentators")</li>
 					<li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
