--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
 					<li><a href="/1.1">Quran</a></li>
 					<li>@Html.RouteLink("Commentaries", "Commentators")</li>
 					<li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
+					<li>@Html.RouteLink("Search", "Search")</li>
 				</ul>
 			</div>
 		</div>
