--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -44,6 +44,18 @@
 	box-sizing: inherit;
 }
 
+.arabic {
+	font-size: 2em;
+	direction: rtl;
+	padding: 0;
+	margin: 0;
+}
+
+.verse__translation.arabic-container > dd {
+	padding: 0em 1em 0em 1em;
+	margin: 0.125em 0 -0.25em 0;
+}
+
 .striped > * {
 	/* Col:Striped 1*/
 	background-color: hsl(0, 0%, 93.3%);
@@ -225,9 +237,9 @@
 	width: 22em;
 }
 
-.search__criteria>*:not(:last-child) {
-	margin-bottom: 0.25em;
-}
+	.search__criteria > *:not(:last-child) {
+		margin-bottom: 0.25em;
+	}
 
 .btn.dropdown-toggle {
 	/*Col:H2*/
@@ -512,15 +524,15 @@ dl.boxed > dd {
 		background-color: hsl(67, 45.7%, 61.0%);
 	}
 
-	.hadith-reference-list__item.selected:hover {
-		/*Col:Tab selected*/
-		background-color: hsl(67, 45.7%, 61.0%);
-	}
+		.hadith-reference-list__item.selected:hover {
+			/*Col:Tab selected*/
+			background-color: hsl(67, 45.7%, 61.0%);
+		}
 
-	.hadith-reference-list__item.selected:active {
-		/*Col:Tab selected*/
-		background-color: hsl(67, 45.7%, 61.0%);
-	}
+		.hadith-reference-list__item.selected:active {
+			/*Col:Tab selected*/
+			background-color: hsl(67, 45.7%, 61.0%);
+		}
 
 	.hadith-reference-list__item:active {
 		/*Col:Tab selected*/
