--- a/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
+++ b/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
@@ -5,7 +5,7 @@
 @{
 	ViewBag.Title = $"Verses for root {Model.ArabicRoot} ({Model.RootLetterNames})";
 }
-<h1>The Quran</h1>
+<h1>The Qur'an</h1>
 <h2>Verses for root @Model.ArabicRoot (@Model.RootLetterNames)</h2>
 <ul class="root-analysis__extract-list striped">
 	<li class="root-analysis__extract-header row hidden-xs">
