--- a/QuranX.Web/Views/Shared/HadithView.cshtml
+++ b/QuranX.Web/Views/Shared/HadithView.cshtml
@@ -22,13 +22,13 @@
 			</div>
 		}
 	</div>
-	<div class="hadith__text hadith__text-english">
+	<div class="hadith__text">
 		@foreach (string text in @Model.Hadith.EnglishText)
 		{
 			<p>@text</p>
 		}
 	</div>
-	<div class="hadith__text hadith__text-arabic">
+	<div class="hadith__text arabic">
 		@foreach (string text in @Model.Hadith.ArabicText)
 		{
 			<p>@text</p>
