--- a/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.Title = $"Analysis for Quran verse {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
 }
 
-<h1>The Quran</h1>
+<h1>The Qur'an</h1>
 <h2>
 	Analysis of verse <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
 		@Model.Chapter.ChapterNumber.@Model.VerseNumber
