--- a/QuranX.Web/Views/VerseHadiths/VerseHadiths.cshtml
+++ b/QuranX.Web/Views/VerseHadiths/VerseHadiths.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.Title = $"Hadiths for {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
 	string hadithsTitle = Model.Hadiths.Count() == 1 ? "hadith" : "hadiths";
 }
-<h1>The Quran</h1>
+<h1>The Qur'an</h1>
 <h2>
 	Hadiths for <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
 		@Model.Chapter.ChapterNumber.@Model.VerseNumber
